# eletron

./: .gitignore  README.md  admin.slnx
admin/: MainWindow.cpp  MainWindow.h  admin.vcxproj
backend/: CMakeLists.txt  README.md  main.cpp
backend/api/: HttpServer.cpp  HttpServer.h
backend/config/: config.example.ini  database.example.ini
backend/core/: Config.cpp  Config.h  Database.cpp  Database.h  FileHelper.cpp  FileHelper.h  JwtHelper.cpp  JwtHelper.h
backend/models/: FileModel.cpp  FileModel.h  FriendGroupModel.cpp  FriendGroupModel.h  FriendshipModel.cpp  FriendshipModel.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  GroupModel.h  MessageModel.cpp  MessageModel.h  UserModel.cpp  UserModel.h
backend/realtime/: WebSocketGateway.cpp  WebSocketGateway.h
backend/routers/: AuthRouter.cpp  AuthRouter.h  FileRouter.cpp  FileRouter.h  FriendGroupRouter.cpp  FriendGroupRouter.h  FriendRouter.cpp  FriendRouter.h  GroupRouter.cpp  GroupRouter.h  MessageRouter.cpp  MessageRouter.h  UserRouter.cpp  UserRouter.h
backend/services/: AuthService.cpp  AuthService.h  FileService.cpp  FileService.h  FriendGroupService.cpp  FriendGroupService.h  FriendService.cpp  FriendService.h  GroupService.cpp  GroupService.h  MessageService.cpp  MessageService.h  UserService.cpp  UserService.h
backend/sql/: init.sql
docs/: api.md  changelog.md  db_schema.md  issues.md  test_report.md
frontend/: CMakeLists.txt  admin.vcxproj  admin.vcxproj.filters
frontend/resources/: MainWindow.qrc
frontend/src/: ApiClient.cpp  ApiClient.h  AuthClient.cpp  AuthClient.h  ChatInputEdit.cpp  ChatInputEdit.h  ChatListWidget.cpp  ChatListWidget.h  ChatWindow.cpp  ChatWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MessageBubble.cpp  MessageBubble.h  NavBar.cpp  NavBar.h  TitleBar.cpp  TitleBar.h  main.cpp
frontend/styles/: main.qss
frontend/widgets/: AddFriendDialog.cpp  AddFriendDialog.h  CreateGroupDialog.cpp  CreateGroupDialog.h  EditProfileDialog.cpp  EditProfileDialog.h  FriendListWidget.cpp  FriendListWidget.h  FriendManagerWidget.cpp  FriendManagerWidget.h  FriendTabWidget.cpp  FriendTabWidget.h  GroupAnnouncementWidget.cpp  GroupAnnouncementWidget.h  GroupChatWindow.cpp  GroupChatWindow.h  GroupMemberWidget.cpp  GroupMemberWidget.h  GroupMessageBubble.cpp  GroupMessageBubble.h  GroupTabWidget.cpp  GroupTabWidget.h  ImageViewerDialog.cpp  ImageViewerDialog.h  MuteDialog.cpp  MuteDialog.h  ProfileDialog.cpp  ProfileDialog.h  UploadProgressWidget.cpp  UploadProgressWidget.h
sql/: init.sql
tests/: CMakeLists.txt  main.cpp
tests/common/: ApiClient.cpp  ApiClient.h  TestDatabase.cpp  TestDatabase.h  TestHelpers.cpp  TestHelpers.h
tests/config/: test_config.ini
tests/integration/: FlowTest.cpp
tests/unit/: AuthTest.cpp  FileTest.cpp  FriendTest.cpp  GroupTest.cpp  MessageTest.cpp  UserTest.cpp
